# brevo-rust

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  PULL_REQUEST_TEMPLATE.md  README.md  swagger_definition_v3.yml
.github/workflows/: rust.yml  security.yml  static.yml
.openapi-generator/: FILES
docs/: AbTestCampaignResult.md  AbTestCampaignResultClickedLinks.md  AbTestCampaignResultStatistics.md  AbTestVersionClicksInner.md  AccountApi.md  AddContactToListByEmails.md  AddContactToListByExtIds.md  AddContactToListByIds.md  AddContactToListRequest.md  AddSubscriptionMemberPayload.md  AggregateBalance.md  AuthenticateDomainModel.md  Balance.md  BalanceApi.md  BalanceDataPerContact.md  BalanceDefinition.md  BalanceDefinitionPage.md  BalanceLimit.md  BalanceOrder.md  Cart.md  CompaniesApi.md  CompaniesIdPatchRequest.md  CompaniesImportPost200Response.md  CompaniesImportPost400Response.md  CompaniesLinkUnlinkIdPatchRequest.md  CompaniesList.md  CompaniesPost200Response.md  CompaniesPostRequest.md  Company.md  CompanyAttributesInner.md  ComponentItems.md  Configuration.md  ContactBalancesResp.md  ContactErrorModel.md  ContactsApi.md  ConversationsAgentOnlinePingPostRequest.md  ConversationsApi.md  ConversationsMessage.md  ConversationsMessageAttachmentsInner.md  ConversationsMessageFile.md  (+451 more)
src/apis/: account_api.rs  balance_api.rs  companies_api.rs  configuration.rs  contacts_api.rs  conversations_api.rs  coupons_api.rs  custom_objects_api.rs  deals_api.rs  domains_api.rs  ecommerce_api.rs  email_campaigns_api.rs  event_api.rs  external_feeds_api.rs  files_api.rs  inbound_parsing_api.rs  master_account_api.rs  mod.rs  notes_api.rs  payments_api.rs  process_api.rs  program_api.rs  reward_api.rs  senders_api.rs  sms_campaigns_api.rs  tasks_api.rs  tier_api.rs  transactional_emails_api.rs  transactional_sms_api.rs  transactional_whats_app_api.rs  user_api.rs  webhooks_api.rs  whats_app_campaigns_api.rs
src/models/: _companies__id__patch_request.rs  _companies_import_post_200_response.rs  _companies_import_post_400_response.rs  _companies_link_unlink_id_patch_request.rs  _companies_post_200_response.rs  _companies_post_request.rs  _conversations_agent_online_ping_post_request.rs  _conversations_messages_id_put_request.rs  _conversations_messages_post_request.rs  _conversations_pushed_messages_post_request.rs  _corporate_group__id__put_request.rs  _corporate_group_post_201_response.rs  _corporate_group_post_request.rs  _corporate_group_unlink_group_id_sub_accounts_put_request.rs  _corporate_ip_get_200_response_inner.rs  _corporate_sso_token_post_request.rs  _corporate_sub_account_ip_associate_post_request.rs  _corporate_sub_account_ip_dissociate_put_request.rs  _corporate_sub_account_key_post_request.rs  _corporate_sub_account_sso_token_post_request.rs  _corporate_user__email__permissions_put_request.rs  _corporate_user_email_permissions_put_request_privileges_inner.rs  _corporate_user_invitation_action_email_put_200_response.rs  _crm_attributes_post_200_response.rs  _crm_attributes_post_request.rs  _crm_deals_id_patch_request.rs  (+479 more)
