[package]
name = "brevo"
version = "1.0.0"
authors = ["contact@brevo.com", "contact@juris-power.com"]
description = "Brevo provide a RESTFul API that can be used with any languages. With this API, you will be able to :   - Manage your campaigns and get the statistics   - Manage your contacts   - Send transactional Emails and SMS   - and much more...  You can download our wrappers at https://github.com/orgs/brevo"
documentation = "https://juris-power.github.io/brevo-rust/brevo/index.html"
include=["/src", "README.md"]
keywords = ["brevo", "mail"]
categories = ["web-programming::http-client"]
license = "AGPL-3.0-only"
edition = "2021"
repository = "https://github.com/Juris-Power/brevo-rust"

[features]
default = ["native-tls"]
rust-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "charset"] }
